--- a/shortcuts.html
+++ b/shortcuts.html
@@ -1,33 +1,43 @@
 <style>
     .game{
         margin-right: 2000000px;
+        margin-bottom: 30px;
     }
     .goojaraTo{
         margin-right: 2000000px;
+        margin-bottom: 30px;
     }
     .chatgpt{
         margin-right: 2000000px;
+        margin-bottom: 30px;
     }
     .y2mate{
         margin-right: 2000000px;
+        margin-bottom: 30px;
     }
     .youtube{
         margin-right: 2000000px;
+        margin-bottom: 30px;
     }
     .gmailInbox{
         margin-right: 2000000px;
+        margin-bottom: 30px;
     }
     .spreadsheet{
         margin-right: 2000000px;
+        margin-bottom: 30px;
     }
     .netflix{
         margin-right: 2000000px;
+        margin-bottom: 30px;
     }
     .w3schools{
         margin-right: 2000000px;
+        margin-bottom: 30px;
     }
     .bizscout{
         margin-right: 2000000px;
+        margin-bottom: 30px;
     }
 
 
