--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
 
 </style>
 
+<title>
+    pacezero
+</title>
 
+<hr>
 
 <a class="game" href="https://soccerstreams.app/" target="_blank">
     game
